# collog

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
include/: collog.h
src/: collog.cpp
test/: CMakeLists.txt
test/src/: test_collog.cpp
